picluster/ingress/traefik-middleware-https-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: web-wouterstemgee
spec:
  redirectScheme:
    scheme: https
    permanent: true
